[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]

[tool.poetry]
authors = ["Vaibhav Pandey <contact@vaibhavpandey.com>"]
description = ""
name = "app"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
asyncio = "^3.4.3"
dependency-injector = "^4.41.0"
fastapi = "^0.111.0"
python = ">=3.10,<3.11"
setuptools = "^70.0.0"
loguru = "^0.7.2"
redis = {extras = ["hiredis"], version = "^5.0.4"}
rq = "^1.16.2"

[tool.poetry.dependencies.uvicorn]
extras = ["standard"]
version = "^0.23.2"

[tool.poetry.group.dev.dependencies]
toml-sort = "^0.23.1"
black = "^24.4.0"

[tool.poe.tasks]
index.script = "app.cli:index"
worker.script = "app.worker:main"
