[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]

[tool.poetry]
authors = ["Vaibhav Pandey <contact@vaibhavpandey.com>"]
description = ""
name = "app"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
asyncio = "^3.4.3"
dependency-injector = "^4.41.0"
fastapi = "^0.111.0"
python = "^3.9"
setuptools = "^70.0.0"
loguru = "^0.7.2"
redis = {extras = ["hiredis"], version = "^5.0.4"}
rq = "^1.16.2"
pymysql = "^1.1.1"
sqlalchemy = "^2.0.30"
cryptography = "^42.0.7"
alembic = "^1.13.1"
drymail = "^0.0.6"

[tool.poetry.dependencies.uvicorn]
extras = ["standard"]
version = "^0.23.2"

[tool.poetry.group.dev.dependencies]
toml-sort = "^0.23.1"
black = "^24.4.0"

[tool.poe.tasks]
welcome.script = "app.cli:welcome"
worker.script = "app.worker:main"
